k8s/ingress/ingress-configuration.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-configuration
  namespace: my-services
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/limit-rps: "5"
    nginx.ingress.kubernetes.io/limit-burst: "5"
    nginx.ingress.kubernetes.io/limit-connections: "2"
    nginx.ingress.kubernetes.io/limit-rate: "65536"         # 64KB/sec
    nginx.ingress.kubernetes.io/limit-rate-after: "131072"  # 128KB
spec:
  ingressClassName: nginx
  rules:
    # - host: localhost
    - http:
        paths:
        # Paths for user service
        - path: /api/v1/users
          pathType: Prefix
          backend:
            service:
              name: user-service
              port:
                number: 3000
        - path: /api/v2/users
          pathType: Prefix
          backend:
            service:
              name: user-service
              port:
                number: 3000
        # Path for product service
        - path: /api/v1/products
          pathType: Prefix
          backend:
            service:
              name: product-service
              port:
                number: 3001
        - path: /api/v2/products
          pathType: Prefix
          backend:
            service:
              name: product-service
              port:
                number: 3001
        # Path for web interface
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web-interface
              port:
                number: 80
